Just cleaning some code for it being more botiful, and updated the sequence diagrams!